debug_lda_compare.txt
time="2026-02-19T15:25:24+01:00" level=warning msg="C:\\Users\\rober\\OneDrive\\Desktop\\Posao\\Antigravity\\InvestingApp\\docker-compose.yml: the attribute `version` is obsolete, it will be ignored, please remove it to avoid potential confusion"
  File "<string>", line 16
    print(f'{yr} ({yr_data.index[-1].strftime(\
                                               ^
SyntaxError: EOL while scanning string literal
